chore: add create product category

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\ProductCategory\" />
+    <Folder Include="Features\ProductCategories\Queries\" />
   </ItemGroup>
 
 </Project>
