chore: add product feature

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -4,15 +4,32 @@
 
   },
   "DatabaseProvider": "SqlServer",
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Data/Logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   },
   "SendMail": {
     "Password": "cxhfpzajumrfriww",
     "Email": "phap74427@gmail.com"
+  },
+  "CloudinarySettings": {
+    "CloudName": "ddmh3qg6y",
+    "ApiKey": "418515191247488",
+    "ApiSecret": "XKFu04cTvC7WoEoq-cJ4pJwT4og"
   },
   "AspNetIdentity": {
     "Password": {
