chore: add some feature

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -65,6 +65,19 @@
     "accessTokenCookieName": "accessToken",
     "refreshTokenCookieName": "refreshToken"
   },
+
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Limit": 100,
+        "Period": "1h",
+        "PeriodTimespan": 3600
+      }
+    ]
+  },
+
   "AllowedHosts": "*",
   "EnableSwaggerInProduction": true,
   "IsDemoVersion": true
