--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -25,8 +25,10 @@
     ]
   },
   "SendMail": {
-    "Password": "cxhfpzajumrfriww",
-    "Email": "phap74427@gmail.com"
+    "SmtpPassword": "cxhfpzajumrfriww",
+    "SmtpUserName": "phap74427@gmail.com",
+    "SmtpPort": 587,
+    "SmtpHost": "smtp.gmail.com"
   },
   "CloudinarySettings": {
     "CloudName": "ddmh3qg6y",
