feat: add inventory

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MSI\\MAYAO;Initial Catalog=CloShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    //"DefaultConnection": "Server=localhost,1433;Database=CloShop;User Id=sa;Password=YourStrong!Passw0rd;",
+    //"DefaultConnection": "Data Source=MSI\\MAYAO;Initial Catalog=CloShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Server=localhost,1433;Database=CloShop;User Id=sa;Password=YourStrong!Passw0rd;",
     //"DefaultConnection": "Server=3.107.24.18,1433;Database=CloShop;User Id=sa;Password=Pass@123456;TrustServerCertificate=True;"
     "Redis": "localhost:6379"
 
