--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=MSI\\MAYAO;Initial Catalog=CloShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "DefaultConnection": "Server=localhost,1433;Database=CloShop;User Id=sa;Password=YourStrong!Passw0rd;",
+    "DefaultConnection": "Data Source=MSI\\MAYAO;Initial Catalog=CloShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    //"DefaultConnection": "Server=localhost,1433;Database=CloShop;User Id=sa;Password=YourStrong!Passw0rd;",
     //"DefaultConnection": "Server=3.107.24.18,1433;Database=CloShop;User Id=sa;Password=Pass@123456;TrustServerCertificate=True;"
     "Redis": "localhost:6379"
 
@@ -81,6 +81,13 @@
         "PeriodTimespan": 3600
       }
     ]
+  },
+  "VNPay": {
+    "vnp_Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "vnp_Api": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
+    "vnp_TmnCode": "V7T8QKQV",
+    "vnp_HashSecret": "0C6E27SMX636VDNBWE5I5TB09W6ULXUC",
+    "vnp_Returnurl": "https://localhost:7190/api/payment/vnpay-return"
   },
 
   "AllowedHosts": "*",
