chore: add expire day cart

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MSI\\MAYAO;Initial Catalog=CloShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    //"DefaultConnection": "Server=localhost,1433;Database=CloShop;User Id=sa;Password=YourStrong!Passw0rd;",
+    //"DefaultConnection": "Data Source=MSI\\MAYAO;Initial Catalog=CloShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Server=localhost,1433;Database=CloShop;User Id=sa;Password=YourStrong!Passw0rd;",
     //"DefaultConnection": "Server=3.107.24.18,1433;Database=CloShop;User Id=sa;Password=Pass@123456;TrustServerCertificate=True;"
     "Redis": "localhost:6379"
 
@@ -36,6 +36,9 @@
     "ApiKey": "418515191247488",
     "ApiSecret": "XKFu04cTvC7WoEoq-cJ4pJwT4og"
   },
+  "CartSettings": {
+    "CartExpirationDays": 1
+  },
   "AspNetIdentity": {
     "Password": {
       "RequireDigit": false,
@@ -69,18 +72,6 @@
     "UseHttpOnlyCookieForToken": true,
     "accessTokenCookieName": "accessToken",
     "refreshTokenCookieName": "refreshToken"
-  },
-
-  "IpRateLimiting": {
-    "EnableEndpointRateLimiting": true,
-    "GeneralRules": [
-      {
-        "Endpoint": "*",
-        "Limit": 100,
-        "Period": "1h",
-        "PeriodTimespan": 3600
-      }
-    ]
   },
   "VNPay": {
     "vnp_Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
